# neologismotupi

./: .dockerignore  .env.example  .gitignore  DEV_NOTES_etymology_builder.md  Makefile  README.md  docker-compose.yml  pnpm-lock.yaml
apps/api/: .env.development  .env.example  .env.production.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_example_votes.py  0003_auth_recovery.py  0004_comments_notifications.py  0005_example_source.py  0006_profile_social_fields.py  0007_example_versions.py  0008_entry_source.py  0009_sources.py  0010_example_source_links.py  0011_source_links.py  0012_source_links_per_edition.py  0013_newsletters.py  0014_audio_samples.py  0015_entry_normalized_gloss.py  0016_user_preferred_theme.py  0017_entry_pydicate.py  0018_user_orthography_map.py  0019_flashcards.py  0020_flashcards_fsrs.py  0021_flashcards_sessions.py  0022_example_normalized_text.py  0023_flashcard_reminders.py  0024_flashcard_session_segments.py  0025_comment_versions.py  0025_flashcard_user_response.py  0026_comment_edit_marker.py  0027_merge_comment_heads.py  0028_flashcard_lists.py  0029_navarro_entries.py
apps/api/app/: __init__.py  config.py  db.py  main.py  security.py
apps/api/app/core/: bootstrap_admin.py  bot_protection.py  change_user_password.py  db_reset.py  deps.py  enums.py  errors.py  migrate_legacy_entry_source.py  permissions.py  schedule_flashcard_reminders.py  schedule_word_of_day.py  seed.py  send_test_email.py  send_word_of_day.py  utils.py
apps/api/app/models/: __init__.py  audio.py  (+9 more)
(+222 files in other folders)
